# quickjs-build-wasm

./: CMakeLists.txt  README.md
include/: quickjs-internals.h
src/: qjs.c  qjsc.c  quickjs-libc.c  quickjs.c
